[gd_scene load_steps=16 format=3 uid="uid://bxqlfmjuqmsqk"]

[ext_resource type="Script" path="res://Scripts/game_map/player_inventory_menu.gd" id="1_fbj4g"]
[ext_resource type="Texture2D" uid="uid://cgdterivga4du" path="res://Sprites/map_assets/stats_heart.png" id="1_jnyon"]
[ext_resource type="Script" path="res://Scripts/description_holder.gd" id="2_0xf7c"]
[ext_resource type="FontFile" uid="uid://cw706bl4vj4uf" path="res://Fonts/Dungeon Depths.otf" id="2_pjgk5"]
[ext_resource type="Texture2D" uid="uid://g5ai6yytrfrd" path="res://Sprites/map_assets/stats_attack.png" id="3_sxawm"]
[ext_resource type="Script" path="res://Scripts/manual_item.gd" id="4_d71f7"]
[ext_resource type="Texture2D" uid="uid://frb4qltosttv" path="res://Sprites/map_assets/stats_shield.png" id="4_todk7"]
[ext_resource type="Texture2D" uid="uid://dgjanom1r1qep" path="res://Sprites/map_assets/stats_heal.png" id="5_j7sk4"]
[ext_resource type="Texture2D" uid="uid://dpk4wisjxb71e" path="res://Sprites/map_assets/stats_gold.png" id="6_7d2by"]
[ext_resource type="Script" path="res://Scripts/shop/shop_container.gd" id="8_1omsm"]
[ext_resource type="Texture2D" uid="uid://bptx871bkg5r2" path="res://Sprites/dice_game_ui/target_arrow.png" id="8_fs74x"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="9_3npen"]
[ext_resource type="Theme" uid="uid://liuy3as2gehs" path="res://Fonts/Themes/bigger_dice_game_ui.tres" id="11_ui6e1"]
[ext_resource type="Script" path="res://Scripts/game_map/deck_numbers.gd" id="12_83h0h"]
[ext_resource type="PackedScene" uid="uid://c21j8rpl4tpqr" path="res://Prefabs/game_ui/ui_item_desciption.tscn" id="13_unhg3"]

[node name="inventory" type="ColorRect"]
offset_left = -832.0
offset_top = -473.0
offset_right = 832.0
offset_bottom = 479.0
color = Color(0.639216, 0.639216, 0.639216, 1)
script = ExtResource("1_fbj4g")

[node name="content" type="Node2D" parent="."]

[node name="charm" type="Node2D" parent="content"]
visible = false

[node name="stats" type="Node2D" parent="content" node_paths=PackedStringArray("ui_item_description")]
visible = false
script = ExtResource("2_0xf7c")
ui_item_description = NodePath("../../ui_item_desciption")

[node name="stats_container" type="VBoxContainer" parent="content/stats"]
offset_left = 282.0
offset_top = 174.0
offset_right = 582.0
offset_bottom = 2070.0
scale = Vector2(0.33, 0.33)
theme_override_constants/separation = 100

[node name="health" type="TextureRect" parent="content/stats/stats_container" node_paths=PackedStringArray("description_holder", "description_location")]
layout_mode = 2
texture = ExtResource("1_jnyon")
script = ExtResource("4_d71f7")
item_data = {
"description": "Your current health is in red and your max health is in pink (hover over heart to see max)",
"item_code": 3,
"item_name": "sta_health",
"long_name": "health"
}
description_holder = NodePath("../..")
description_location = NodePath("../../../../description_locations/stats")

[node name="current_text" type="RichTextLabel" parent="content/stats/stats_container/health"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 140.0
offset_top = 131.429
offset_right = 743.0
offset_bottom = 291.429
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="max_text" type="RichTextLabel" parent="content/stats/stats_container/health"]
visible = false
self_modulate = Color(1, 0.0666667, 1, 1)
layout_mode = 0
offset_left = 140.0
offset_top = 131.429
offset_right = 743.0
offset_bottom = 291.429
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="atk_power" type="TextureRect" parent="content/stats/stats_container" node_paths=PackedStringArray("description_holder", "description_location")]
layout_mode = 2
texture = ExtResource("3_sxawm")
script = ExtResource("4_d71f7")
item_data = {
"description": "the current strength of your attack rolls",
"item_code": 3,
"item_name": "sta_attack",
"long_name": "attack power"
}
description_holder = NodePath("../..")
description_location = NodePath("../../../../description_locations/stats")

[node name="ui_text" type="RichTextLabel" parent="content/stats/stats_container/atk_power"]
layout_mode = 0
offset_left = 140.0
offset_top = 180.0
offset_right = 743.0
offset_bottom = 340.0
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="shield_power" type="TextureRect" parent="content/stats/stats_container" node_paths=PackedStringArray("description_holder", "description_location")]
layout_mode = 2
texture = ExtResource("4_todk7")
script = ExtResource("4_d71f7")
item_data = {
"description": "the current strength of your defend rolls",
"item_code": 3,
"item_name": "sta_shield",
"long_name": "shield power"
}
description_holder = NodePath("../..")
description_location = NodePath("../../../../description_locations/stats")

[node name="ui_text" type="RichTextLabel" parent="content/stats/stats_container/shield_power"]
layout_mode = 0
offset_left = 140.0
offset_top = 181.143
offset_right = 743.0
offset_bottom = 341.143
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="heal_power" type="TextureRect" parent="content/stats/stats_container" node_paths=PackedStringArray("description_holder", "description_location")]
layout_mode = 2
texture = ExtResource("5_j7sk4")
script = ExtResource("4_d71f7")
item_data = {
"description": "the current strength of your heal rolls",
"item_code": 3,
"item_name": "sta_heal",
"long_name": "heal power"
}
description_holder = NodePath("../..")
description_location = NodePath("../../../../description_locations/stats")

[node name="ui_text" type="RichTextLabel" parent="content/stats/stats_container/heal_power"]
layout_mode = 0
offset_left = 140.0
offset_top = 181.143
offset_right = 743.0
offset_bottom = 341.143
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="gold" type="TextureRect" parent="content/stats/stats_container" node_paths=PackedStringArray("description_holder", "description_location")]
layout_mode = 2
texture = ExtResource("6_7d2by")
script = ExtResource("4_d71f7")
item_data = {
"description": "the current amount of gold you have",
"item_code": 3,
"item_name": "sta_gold",
"long_name": "gold"
}
description_holder = NodePath("../..")
description_location = NodePath("../../../../description_locations/stats")

[node name="ui_text" type="RichTextLabel" parent="content/stats/stats_container/gold"]
layout_mode = 0
offset_left = 140.0
offset_top = 189.715
offset_right = 743.0
offset_bottom = 349.715
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/normal_font = ExtResource("2_pjgk5")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "-"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="content/stats"]
offset_left = 856.0
offset_top = 184.0
offset_right = 1274.0
offset_bottom = 572.0
scale = Vector2(1.5, 1.5)

[node name="ScrollContainer" type="ScrollContainer" parent="content/stats/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="content/stats/PanelContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4
script = ExtResource("8_1omsm")

[node name="title" type="Label" parent="content/stats"]
offset_left = 912.0
offset_top = 62.0
offset_right = 1385.0
offset_bottom = 148.0
theme = ExtResource("11_ui6e1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 45
text = "Inventory"

[node name="title2" type="Label" parent="content/stats"]
offset_left = 106.0
offset_top = 62.0
offset_right = 579.0
offset_bottom = 148.0
theme = ExtResource("11_ui6e1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 45
text = "Stats"
horizontal_alignment = 1

[node name="deck" type="Node2D" parent="content" node_paths=PackedStringArray("ui_item_description")]
visible = false
script = ExtResource("2_0xf7c")
ui_item_description = NodePath("../../ui_item_desciption")

[node name="inventory_grid" type="PanelContainer" parent="content/deck"]
offset_left = 169.0
offset_top = 184.0
offset_right = 576.0
offset_bottom = 572.0
scale = Vector2(1.5, 1.5)

[node name="ScrollContainer" type="ScrollContainer" parent="content/deck/inventory_grid"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="content/deck/inventory_grid/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4
script = ExtResource("8_1omsm")

[node name="deck_grid" type="PanelContainer" parent="content/deck"]
offset_left = 940.0
offset_top = 184.0
offset_right = 1317.0
offset_bottom = 572.0
scale = Vector2(1.5, 1.5)

[node name="ScrollContainer" type="ScrollContainer" parent="content/deck/deck_grid"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="content/deck/deck_grid/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4
script = ExtResource("8_1omsm")

[node name="title" type="Label" parent="content/deck"]
offset_left = 225.0
offset_top = 62.0
offset_right = 698.0
offset_bottom = 148.0
theme = ExtResource("11_ui6e1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 45
text = "Inventory"

[node name="title2" type="Label" parent="content/deck"]
offset_left = 996.0
offset_top = 62.0
offset_right = 1469.0
offset_bottom = 148.0
theme = ExtResource("11_ui6e1")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 45
text = "deck"
horizontal_alignment = 1

[node name="deck_numbers" type="Node2D" parent="content/deck"]
script = ExtResource("12_83h0h")

[node name="min_dice" type="Label" parent="content/deck/deck_numbers"]
offset_left = 1267.0
offset_top = 807.0
offset_right = 1429.0
offset_bottom = 893.0
theme = ExtResource("11_ui6e1")
text = "-"
horizontal_alignment = 1

[node name="label" type="Label" parent="content/deck/deck_numbers"]
offset_left = 1239.0
offset_top = 807.0
offset_right = 1315.0
offset_bottom = 893.0
theme = ExtResource("11_ui6e1")
text = "/"

[node name="current_dice" type="Label" parent="content/deck/deck_numbers"]
offset_left = 1090.0
offset_top = 807.0
offset_right = 1244.0
offset_bottom = 893.0
theme = ExtResource("11_ui6e1")
text = "-"
horizontal_alignment = 1

[node name="buttons" type="Node2D" parent="."]

[node name="left" type="TextureButton" parent="buttons"]
self_modulate = Color(0, 1, 1, 1)
offset_left = 219.0
offset_top = 763.0
offset_right = 519.0
offset_bottom = 1063.0
rotation = 1.5708
scale = Vector2(0.45, 0.45)
texture_normal = ExtResource("8_fs74x")

[node name="right" type="TextureButton" parent="buttons"]
self_modulate = Color(0, 1, 1, 1)
offset_left = 1485.0
offset_top = 894.0
offset_right = 1785.0
offset_bottom = 1194.0
rotation = 4.71239
scale = Vector2(0.45, 0.45)
texture_normal = ExtResource("8_fs74x")

[node name="close" type="TextureButton" parent="buttons"]
offset_left = 1502.0
offset_top = 20.0
offset_right = 1724.0
offset_bottom = 247.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_3npen")

[node name="ui_item_desciption" parent="." instance=ExtResource("13_unhg3")]
visible = false
layout_mode = 0
offset_left = 268.0
offset_top = 208.0
offset_right = 780.0
offset_bottom = 664.0

[node name="description_locations" type="Node2D" parent="."]

[node name="inventory" type="Node2D" parent="description_locations"]
position = Vector2(268, 208)

[node name="stats" type="Node2D" parent="description_locations"]
position = Vector2(878, 208)

[node name="deck_inventory" type="Node2D" parent="description_locations"]
position = Vector2(992, 208)

[node name="deck" type="Node2D" parent="description_locations"]
position = Vector2(198, 208)

[connection signal="mouse_entered" from="content/stats/stats_container/health" to="." method="_on_health_mouse_entered"]
[connection signal="mouse_exited" from="content/stats/stats_container/health" to="." method="_on_health_mouse_exited"]
[connection signal="inventory_changed" from="content/deck/deck_grid/ScrollContainer/GridContainer" to="content/deck/deck_numbers" method="_on_grid_container_inventory_changed"]
[connection signal="button_down" from="buttons/left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="buttons/right" to="." method="_on_right_button_down"]
[connection signal="button_down" from="buttons/close" to="." method="_on_close_button_down"]
